2000-10-09  Pavel Roskin  <proski@gnu.org>

	* m4/init.m4 (AM_INIT_AUTOMAKE): Don't rely on variable
	assignments changing $? - it's broken in ash-0.2.
	* m4/missing.m4 (AM_MISSING_HAS_RUN): Likewise.

2000-10-06  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* aclocal.in (add_file): Strip comments while scanning for
	macro dependencies.

2000-09-15  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* automake.in (initialize_global_constants): End the
	result of dist-bzip2 with tar.bz2, not bz2.

2000-08-30  Tom Tromey  <tromey@cygnus.com>

	Fix for PR automake/72:
	* automake.in (initialize_per_input): Define `need_link'.
	(finish_languages): Use need_link.
	(handle_source_transform): Set need_link if required.

2000-08-28  Tom Tromey  <tromey@cygnus.com>

	* automake.in (yacc, yaccxx, lex, lexxx): Set `derived-autodep'
	key.
	(register_language): Default the `derived-autodep' option.
	(handle_single_transform_list): Add to %dep_files if language has
	`derived-autodep' set.  Re-fixes lex4.test.

2000-08-27  Tom Tromey  <tromey@cygnus.com>

	* automake.in (handle_single_transform_list): Only add to
	%dep_files if language is found and supports automatic dependency
	tracking.  Fixes PR automake/75.

	* automake.in (am_primary_prefixes): Don't set `valid' for
	configure variables that don't satisfy the other constraints.
	Fixes PR automake/68.

2000-04-14  Victor V. Vengerov <vvv@oktet.ru>

	Fix for PR automake/67.
	* automake.in (handle_multilib): remove .am suffix in fragment
	name passed to file_contents.
	* m4/multi.m4: Add missing ')' in AC_ARG_ENABLE invocation.
	Remove external quotes in first arg of AC_OUTPUT_COMMANDS.
	Remove unnecessary "rel-to-top-srcdir" before config-ml.in.

2000-08-26  Tom Tromey  <tromey@cygnus.com>

	* subdirs.am (maintainer-clean-recursive): Always run clean rules
	in `.' after all subdirs.  Fixes PR automake/3 and PR automake/24.

	* automake.in (handle_man_pages): Generate install targets for man