@@ -3172,10 +3172,14 @@ sub handle_aclocal_m4
 			    ($acinclude ? ' acinclude.m4' : '')
 			    );
 
-	# Scan all -I directories for m4 files.  These are our
-	# dependencies.
-	if (&variable_defined ('ACLOCAL_AMFLAGS'))
+	if (&variable_defined ('ACLOCAL_M4_SOURCES'))
 	{
+	    push (@ac_deps, "\$(ACLOCAL_M4_SOURCES)");
+	}
+	elsif (&variable_defined ('ACLOCAL_AMFLAGS'))
+	{
+	    # Scan all -I directories for m4 files.  These are our
+	    # dependencies.
 	    local ($examine_next, $amdir) = 0;
 	    foreach $amdir (&variable_value_as_list ('ACLOCAL_AMFLAGS', ''))
 	    {
