@@ -4,6 +4,9 @@
 	assignments changing $? - it's broken in ash-0.2.
 	* m4/missing.m4 (AM_MISSING_HAS_RUN): Likewise.
 
+	* automake.in (handle_aclocal_m4): If ACLOCAL_M4_SOURCES is
+	defined use it as the list of M4 files aclocal.m4 depends on.
+
 2000-10-06  Alexandre Duret-Lutz  <duret_g@epita.fr>
 
 	* aclocal.in (add_file): Strip comments while scanning for
